[gd_scene load_steps=11 format=3 uid="uid://b4574jg6jqylw"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_lwe60"]
[ext_resource type="PackedScene" uid="uid://bjri0wta252am" path="res://scenes/player/player_sprite.tscn" id="2_v4j13"]
[ext_resource type="Theme" uid="uid://coxyygmaexqmr" path="res://scenes/menus/MainMenu.tres" id="3_rj6jc"]
[ext_resource type="Texture2D" uid="uid://dp3yhkc0dm26m" path="res://assets/menus/buttons/UI_Button_Start/Normal Merged.PNG" id="4_i7qsj"]
[ext_resource type="PackedScene" uid="uid://cswvdxek4jyvj" path="res://sounds/SoundManager.tscn" id="4_p8uis"]
[ext_resource type="Texture2D" uid="uid://yi1uwgmq4cnp" path="res://assets/menus/buttons/UI_Button_Start/Pressed Merged.PNG" id="5_8xvff"]
[ext_resource type="PackedScene" uid="uid://cnpxgr2udl24f" path="res://scenes/menus/volume_controls.tscn" id="5_nk4d7"]
[ext_resource type="Texture2D" uid="uid://p3wy4bpjunxx" path="res://assets/menus/buttons/UI_Button_Exit/Normal Merged.PNG" id="7_ncamn"]
[ext_resource type="Texture2D" uid="uid://bphoyh1iuyhel" path="res://assets/menus/buttons/UI_Button_Exit/Pressed Merged.PNG" id="8_oilt8"]
[ext_resource type="Texture2D" uid="uid://dsaun7y5fl7lm" path="res://assets/menus/buttons/UI_Button_Exit/Hover Merged.PNG" id="9_1kiyl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwe60")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.757116, 0.565431, 0.390972, 1)

[node name="PlayerSprite" parent="CanvasLayer" instance=ExtResource("2_v4j13")]
z_index = 1
position = Vector2(1049, 326)
scale = Vector2(19, 19)

[node name="PlayerFakeShadow" parent="CanvasLayer" instance=ExtResource("2_v4j13")]
modulate = Color(0, 0, 0, 0.584314)
position = Vector2(1043, 324)
scale = Vector2(19, 19)

[node name="Start" type="TextureButton" parent="CanvasLayer"]
texture_filter = 6
offset_left = 90.0
offset_top = 308.0
offset_right = 869.0
offset_bottom = 608.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_i7qsj")
texture_pressed = ExtResource("5_8xvff")
stretch_mode = 4

[node name="Exit" type="TextureButton" parent="CanvasLayer"]
texture_filter = 2
offset_left = 86.0
offset_top = 483.0
offset_right = 865.0
offset_bottom = 783.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_rj6jc")
texture_normal = ExtResource("7_ncamn")
texture_pressed = ExtResource("8_oilt8")
texture_hover = ExtResource("9_1kiyl")
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 7.0
offset_right = 215.0
offset_bottom = 86.0
scale = Vector2(4.5, 4.5)
mouse_force_pass_scroll_events = false
theme = ExtResource("3_rj6jc")
theme_override_font_sizes/normal_font_size = 30
text = "Cant Wait To Die!"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="SoundManager" parent="CanvasLayer" instance=ExtResource("4_p8uis")]

[node name="VolumeControls" parent="CanvasLayer" instance=ExtResource("5_nk4d7")]
offset_left = 364.0
offset_top = 269.0
offset_right = 891.0
offset_bottom = 659.0

[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_exit_pressed"]
